@@ -1,40 +1,0 @@
-What is working in what release and when is it released.
-
-0.65: 14 June 2005 - released
-	[func] ?
-	[impl] cleanups, clearer memeory management
-
-0.70: July?
-	[func]
-
-	[impl]
-	
-	[unsorted]
-	o Fix ALL remaining loose ends:
-	  - half supported records, nsec_frm_str comes to mind
-	  - documentation
-	  - tutorial
-	  - more dnssec example programs
-
-0.80: End of July???
-	[unsorted]
-	o concept of a DNS zone worked out
-	o serving stuff - i.e build a server in a few lines
-
-0.90: August???
-	[func]
-	[impl] private key type for all signing (tsig/DNSSEC)
-	[unsorted]
-	o DNS zone stuff working
-	
-1.0: August??
-	[func] Fully working, documented library
-	o server stuff working
-	o feature complete
-	o documentation complete
-
-Post 1.0:
-	[unsorted]
-	o bugs/docs/updates
-
-	o Incorperate features from drill that look promising
